@@ -133,6 +133,8 @@ PHP                                                                        NEWS
   (Jani)
 - Fixed bug #42318 (problem with nm on AIX, not finding object files). (Dmitry)
 - Fixed bug #41348 (OCI8: allow compilation with Oracle 8.1). (Chris Jones)
+- Fixed bug #43045 (SOAP encoding violation on "INF" for type double/float).
+  (Dmitry)
 
 01 May 2008, PHP 5.2.6
 - Fixed two possible crashes inside posix extension (Tony)
